--- a/.github/workflows/sample.yml
+++ b/.github/workflows/sample.yml
@@ -2,11 +2,21 @@ name: shell-commands
 
 on: [push]
 
+# on:
+#   pull_request:
+#     types: [opened, closed, reopened]
+env:
+    PUBLICENV: Available for all jobs
+
 jobs:
     run-shell-command:
         runs-on: ubuntu-latest
+        env:
+            JOBENV: Available for this job only
         steps:
             - name: echo a string
+              env:
+                  STEPENV: Available for this step only
               run: echo "Hello"
 
             - name: multiline commands
@@ -17,8 +27,17 @@ jobs:
             - name: colining repo into vm
               uses: actions/checkout@v2.3.4
 
+            - name: echo env variables
+              run: |
+                  echo "${PUBLICENV}"
+                  echo "${JOBENV}"
+                  echo "${STEPENV}"
+                  echo "${GITHUB_ACTOR}"
+                  echo "${GITHUB_REPOSITORY}"
+
     run-windows-command:
         runs-on: windows-latest
+        needs: ["run-shell-command"]
         steps:
             - name: Directory echo
               run: pwd
