--- a/.github/workflows/sample.yml
+++ b/.github/workflows/sample.yml
@@ -25,7 +25,7 @@ jobs:
                   npm -v
 
             - name: colining repo into vm
-              uses: actions/checkout@v2.3.4
+              uses: actions/checkout@2.3.4
 
             - name: echo env variables
               run: |
